--- a/AdTapsyDemo/res/layout/activity_main.xml
+++ b/AdTapsyDemo/res/layout/activity_main.xml
@@ -23,6 +23,15 @@
         android:layout_below="@+id/imageView1"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="24dp"
-        android:text="Show Ad" />
+        android:text="Show Interstitial Ad" />
+
+    <Button
+        android:id="@+id/showRewardedBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/showAdBtn"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="34dp"
+        android:text="Show Rewarded Video" />
 
 </RelativeLayout>
